# Requirement-Quality-Gate

./: .cursorrules  .env.example  .gitignore  Dockerfile  README.md  SPEC_GUIDE.md  START_HERE.md  pyproject.toml
.agent/rules/: rules.md
.agent/workflows/: workflow.md
.kiro/: DOCUMENTATION_UPDATE.md  PROJECT_OVERVIEW.md  SETUP_COMPLETE.md
.kiro/specs/phase-1-foundation-scoring/: design.md  requirements.md  tasks.md
.kiro/specs/phase-2-structuring-workflow/: design.md  requirements.md  tasks.md
.kiro/steering/: ai-assistant-guide.md  development-workflow.md  phase-execution-guide.md  schema-driven-rules.md
config/: guardrail_config.yaml  scoring_rubric.yaml
docs/: MANUAL_TESTING_GUIDE.md  PROGRESS.md  architecture.md  decisions.md  init_info.md  milestone_t1_results.md  prompts.md  workflow.md  产品功能说明书.md  技术方案.md  核心 Prompts 与规则集配置-4.md
prompts/: structuring_agent_v1.txt
requirements/: Agent-2.md  Roadmap-3.md  Schema-Driven_Quality-Gated_Graph_Workflow_实施白皮书_v1.0.md  manual_reports.md  蓝图-1.md  项目需求文档.md
scripts/: manual_test_runner.py  milestone_t2_1_verification.py  milestone_t2_verification.py  test_llm_connectivity.py  verify_milestone_t1.py
src/reqgate/: __init__.py
src/reqgate/adapters/: __init__.py  llm.py
src/reqgate/agents/: __init__.py  scoring.py
src/reqgate/api/: __init__.py  routes.py
src/reqgate/app/: main.py
src/reqgate/config/: __init__.py  settings.py
src/reqgate/gates/: __init__.py  decision.py  rules.py
src/reqgate/observability/: __init__.py  logging.py
src/reqgate/schemas/: __init__.py  config.py  inputs.py  internal.py  outputs.py
src/reqgate/workflow/: __init__.py  errors.py  graph.py
src/reqgate/workflow/nodes/: __init__.py  input_guardrail.py  structure_check.py  structuring_agent.py
tests/: test_e2e_workflow.py  test_fallback.py  test_hard_gate.py  test_health.py  test_input_guardrail.py  test_integration.py  test_llm_adapter.py  test_llm_retry.py  test_prd_draft_schema.py  test_rubric_loader.py  test_schemas_inputs.py  test_schemas_outputs.py  test_scoring_agent.py  test_settings.py  test_structure_check.py  test_structuring_agent.py  test_workflow_config.py  test_workflow_graph.py  test_workflow_integration.py
tests/samples/: bad_requirement_missing_ac.txt
